Remove weird whitespace

--- a/server/src/main/resources/server_in_maintenance_mode.html
+++ b/server/src/main/resources/server_in_maintenance_mode.html
@@ -61,7 +61,7 @@
       font-size:   11px;
       font-weight: 200;
       color:       #999;
-      font-family: Arial, ​ Helvetica, ​ sans-serif;
+      font-family: Arial, Helvetica, sans-serif;
     }
 
     .clear_float::after {
